<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity"
        />

    <Button
        android:layout_gravity="bottom"
        android:id="@+id/startButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:background="@color/orange"
        android:elevation="5dp"
        android:enabled="true"
        android:text="@string/start_navigating"
        android:textColor="@color/mapBoxWhite" />


    <Button
        android:layout_gravity="bottom"
        android:id="@+id/cancelButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="288dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="20dp"
        android:background="@color/mapBoxBlue"
        android:elevation="5dp"
        android:enabled="true"
        android:text="@string/cancel"
        android:textColor="@color/mapBoxWhite" />

    <Button
        android:layout_gravity="bottom"
        android:id="@+id/saveButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:background="@color/mapBoxBlue"
        android:elevation="5dp"
        android:enabled="true"
        android:text="@string/save"
        android:textColor="@color/mapBoxWhite"
        android:visibility="invisible"/>

    <Button
        android:layout_gravity="bottom"
        android:id="@+id/addButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:background="@color/orange"
        android:elevation="5dp"
        android:enabled="true"
        android:text="@string/add"
        android:textColor="@color/mapBoxWhite"
        android:visibility="invisible"/>


</FrameLayout>
