<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity"
    android:background="@color/main_background">

    <TextView
        android:id="@+id/text_view_name_label"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:textSize="28sp"
        android:textColor="@color/content_background"
        android:text="kyle murdoch"
        android:padding="15dp"/>

    <ListView
        android:id="@+id/list_view_adventure_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/content_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_profile"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/profile"
            android:background="@color/blue" />

        <Button
            android:id="@+id/button_new_adventure"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:layout_marginStart="2dp"
            android:textSize="18sp"
            android:text="@string/new_adventure"
            android:background="@color/orange" />

        <Button
            android:id="@+id/button_sign_out"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:textSize="18sp"
            android:text="@string/sign_out"
            android:background="@color/blue" />

    </LinearLayout>

</LinearLayout>